drop table if exists approval_record;
drop table if exists agent_chat_history;
drop table if exists risk_alert;
drop table if exists agent_recommendation;
drop table if exists agent_task;
drop table if exists access_request;
drop table if exists audit_log;
drop table if exists masking_policy;
drop table if exists field_classification;
drop table if exists classification_rule;
drop table if exists classification_level;
drop table if exists classification_category;
drop table if exists data_field_asset;
drop table if exists data_table_asset;
drop table if exists data_source;
drop table if exists sys_role_permission;
drop table if exists sys_user_role;
drop table if exists sys_permission;
drop table if exists sys_role;
drop table if exists sys_user;

create table sys_user (
  id bigint generated by default as identity primary key,
  username varchar(50) not null unique,
  password varchar(100) not null,
  real_name varchar(50),
  email varchar(100),
  phone varchar(30),
  enabled bit default 1,
  created_time timestamp
);

create table sys_role (
  id bigint generated by default as identity primary key,
  role_code varchar(50) not null unique,
  role_name varchar(100) not null,
  description varchar(255)
);

create table sys_permission (
  id bigint generated by default as identity primary key,
  permission_code varchar(100) not null unique,
  permission_name varchar(100) not null,
  description varchar(255)
);

create table sys_user_role (user_id bigint not null, role_id bigint not null, primary key(user_id, role_id));
create table sys_role_permission (role_id bigint not null, permission_id bigint not null, primary key(role_id, permission_id));

create table data_source (
  id bigint generated by default as identity primary key,
  source_name varchar(100) not null,
  source_type varchar(50) not null,
  host varchar(100),
  port int,
  database_name varchar(100),
  description varchar(255),
  created_time timestamp
);

create table data_table_asset (
  id bigint generated by default as identity primary key,
  source_id bigint not null,
  table_name varchar(100) not null,
  business_name varchar(100),
  description varchar(255),
  owner_department varchar(100),
  created_time timestamp
);

create table data_field_asset (
  id bigint generated by default as identity primary key,
  table_id bigint not null,
  field_name varchar(100) not null,
  field_type varchar(50) not null,
  field_comment varchar(255),
  sample_value varchar(500),
  is_sensitive bit default 0,
  created_time timestamp
);

create table classification_category (
  id bigint generated by default as identity primary key,
  category_name varchar(100) not null,
  description varchar(255)
);

create table classification_level (
  id bigint generated by default as identity primary key,
  level_code varchar(10) not null unique,
  level_name varchar(50) not null,
  level_order int not null,
  description varchar(255)
);

create table classification_rule (
  id bigint generated by default as identity primary key,
  rule_name varchar(100) not null,
  match_type varchar(20) not null,
  match_pattern varchar(255) not null,
  category_id bigint not null,
  level_id bigint not null,
  enabled bit default 1,
  created_time timestamp
);

create table field_classification (
  id bigint generated by default as identity primary key,
  field_id bigint not null unique,
  category_id bigint not null,
  level_id bigint not null,
  classify_method varchar(20) not null,
  classified_by bigint,
  classified_time timestamp,
  remark varchar(255)
);

create table masking_policy (
  id bigint generated by default as identity primary key,
  policy_name varchar(100) not null,
  policy_type varchar(50) not null,
  example_before varchar(100),
  example_after varchar(100),
  description varchar(255),
  enabled bit default 1
);

create table access_request (
  id bigint generated by default as identity primary key,
  user_id bigint not null,
  field_id bigint not null,
  reason varchar(255),
  status varchar(20) not null,
  request_time timestamp,
  valid_until timestamp
);

create table approval_record (
  id bigint generated by default as identity primary key,
  request_id bigint not null,
  approver_id bigint,
  approval_result varchar(20) not null,
  approval_comment varchar(255),
  approval_time timestamp
);

create table audit_log (
  id bigint generated by default as identity primary key,
  user_id bigint,
  operation_type varchar(50) not null,
  target_type varchar(50),
  target_id bigint,
  operation_time timestamp not null,
  ip_address varchar(50),
  result varchar(20),
  detail varchar(500)
);

create table agent_task (
  task_id bigint generated by default as identity primary key,
  task_type varchar(64),
  task_status varchar(32),
  input_data clob,
  output_data clob,
  created_by bigint,
  created_time timestamp,
  finished_time timestamp,
  error_message clob
);

create table agent_recommendation (
  recommendation_id bigint generated by default as identity primary key,
  recommendation_type varchar(64),
  target_type varchar(64),
  target_id bigint,
  recommendation_result varchar(64),
  risk_level varchar(32),
  confidence decimal(5,2),
  reason clob,
  suggestion clob,
  applied bit default 0,
  created_time timestamp,
  created_by bigint
);

create table risk_alert (
  alert_id bigint generated by default as identity primary key,
  risk_type varchar(64),
  risk_level varchar(32),
  user_id bigint,
  target_type varchar(64),
  target_id bigint,
  description clob,
  suggestion clob,
  status varchar(32),
  created_time timestamp,
  handled_by bigint,
  handled_time timestamp
);

create table agent_chat_history (
  chat_id bigint generated by default as identity primary key,
  user_id bigint,
  question clob,
  answer clob,
  created_time timestamp
);

create index idx_data_field_name on data_field_asset(field_name);
create index idx_field_classification_level on field_classification(level_id);
create index idx_audit_user on audit_log(user_id);
create index idx_audit_time on audit_log(operation_time);
create index idx_access_status on access_request(status);
create index idx_agent_task_type on agent_task(task_type);
create index idx_agent_recommendation_target on agent_recommendation(target_type, target_id);
create index idx_risk_alert_level on risk_alert(risk_level);
create index idx_risk_alert_user on risk_alert(user_id);
create index idx_agent_chat_user on agent_chat_history(user_id);
