erDiagram
  SYS_USER ||--o{ SYS_USER_ROLE : has
  SYS_ROLE ||--o{ SYS_USER_ROLE : assigned
  SYS_ROLE ||--o{ SYS_ROLE_PERMISSION : grants
  SYS_PERMISSION ||--o{ SYS_ROLE_PERMISSION : contains
  DATA_SOURCE ||--o{ DATA_TABLE_ASSET : owns
  DATA_TABLE_ASSET ||--o{ DATA_FIELD_ASSET : owns
  DATA_FIELD_ASSET ||--o| FIELD_CLASSIFICATION : classified_as
  CLASSIFICATION_CATEGORY ||--o{ FIELD_CLASSIFICATION : category
  CLASSIFICATION_LEVEL ||--o{ FIELD_CLASSIFICATION : level
  CLASSIFICATION_CATEGORY ||--o{ CLASSIFICATION_RULE : target_category
  CLASSIFICATION_LEVEL ||--o{ CLASSIFICATION_RULE : target_level
  SYS_USER ||--o{ ACCESS_REQUEST : submits
  DATA_FIELD_ASSET ||--o{ ACCESS_REQUEST : requested
  ACCESS_REQUEST ||--o{ APPROVAL_RECORD : approved_by
  SYS_USER ||--o{ AUDIT_LOG : writes
  SYS_USER ||--o{ AGENT_TASK : creates
  SYS_USER ||--o{ AGENT_RECOMMENDATION : creates
  DATA_FIELD_ASSET ||--o{ AGENT_RECOMMENDATION : target
  ACCESS_REQUEST ||--o{ AGENT_RECOMMENDATION : reviewed
  SYS_USER ||--o{ RISK_ALERT : related
  AUDIT_LOG ||--o{ RISK_ALERT : produces
  SYS_USER ||--o{ AGENT_CHAT_HISTORY : asks
